# CE7490-Project1

./: .gitattributes  .gitignore  CMakeLists.txt  main.cpp
data/: amazon.txt  amazonsample.txt  arxiv.txt  facebook.txt  p2pgnutella.txt  twitter.txt  twittersample1.txt  twittersample2.txt
experiment/: analysis.py  plot.py  result.csv  run.py
plots/: facebook-nodes-vs-cost-server-128-replica-0.eps  facebook-nodes-vs-cost-server-128-replica-2.eps  facebook-nodes-vs-cost-server-128-replica-3.eps  large-dataset-vs-cost-server-128-replica-0.eps  large-dataset-vs-cost-server-128-replica-2.eps  large-dataset-vs-time-server-128-replica-0.eps  large-dataset-vs-time-server-128-replica-2.eps  small-dataset-vs-cost-server-128-replica-0.eps  small-dataset-vs-cost-server-128-replica-2.eps  small-dataset-vs-cost-server-128-replica-3.eps  small-dataset-vs-time-server-128-replica-0.eps  small-dataset-vs-time-server-128-replica-2.eps  small-dataset-vs-time-server-128-replica-3.eps
result/: amazon-metis-128-0-0  amazon-metis-128-2-0  amazon-offline-128-0-0  amazon-offline-128-2-0  amazon-online-128-0-0  amazon-online-128-2-0  amazon-random-128-0-0  amazon-random-128-2-0  amazon-spar-128-0-0  amazon-spar-128-2-0  amazonsample-metis-128-0-0  amazonsample-metis-128-2-0  amazonsample-metis-128-3-0  amazonsample-offline-128-0-0  amazonsample-offline-128-2-0  amazonsample-offline-128-3-0  amazonsample-online-128-0-0  amazonsample-online-128-2-0  amazonsample-online-128-3-0  amazonsample-random-128-0-0  amazonsample-random-128-2-0  amazonsample-random-128-3-0  amazonsample-spar-128-0-0  (+147 more)
(+15 files in other folders)
